Fixed android button alignment

--- a/app/assets/styles/blink/_ReadyBox.scss
+++ b/app/assets/styles/blink/_ReadyBox.scss
@@ -40,7 +40,7 @@
 .androidButton {
     background-color: rgba(#6DAA63, .9);
     margin: 10px;
-    padding-top: 2px;
+    padding-top: 1px;
     padding-left: 1px;
 }
 
